Update PangeanicTranslationService.java
removed the collectors indirection